[package]
name = "stream-unzip"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jsoverson/stream-unzip"
description = "Unzip a file incrementally"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
inflate = "0.4"
bytes = "1.0"

[dev-dependencies]
tokio = { version = "1.0.0", features = ["full"] }
futures = "0.3.0"
color-backtrace = "0.5.1"
env_logger = "0.10.0"
ubio = { version = "0.1.0" }
zip = "0.6.3"
anyhow = "1.0"
